--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@
 
 
 .col3{
-    width: calc(100%/5);
+    width: calc(85%/5);
     padding: 0 1rem;
 }
 
@@ -170,10 +170,11 @@
 
 .section3{
     margin-top: 5%;
+    background-color: whitesmoke;
 }
 
 .col4{
-    width: calc(100%/2);
+    width: calc(94%/2);
     padding: 0 1rem;
 }
 
@@ -190,6 +191,9 @@
 
 /* css for section 4 */
 
+.section4{
+    background-color: whitesmoke;
+}
 .col5{
     width: calc(92%/3);
     padding: 1rem 1rem;
@@ -198,8 +202,79 @@
 .card{
 
     display: flex;
+    padding: 1rem 1rem;
     gap:20px;
     border: 1px solid black;
     background-color: white;
     box-shadow: 1px 1px 1px 5px lightgray;
+}
+
+/* css for section 6 */
+.section6{
+    margin-top: 5%;
+}
+.col6{
+    width: calc(92%/3);
+    padding: 1rem 1rem;
+}
+
+.sec6_card{
+    border: 1px solid;
+    border-radius: 8px;
+}
+
+.sec6_img{
+    width:100%;
+}
+
+.sec6_content{
+    margin-top: 15%;
+    padding-bottom: 1rem;
+}
+
+.sec6_content a{
+    text-decoration: none;
+    font-size: 20px;
+}
+
+/* css for section 7 */
+
+.section7{
+    margin-top: 5%;
+}
+
+.col7{
+    width: calc(92%/2);
+    padding: 1rem 1rem;
+}
+
+.sec7_user{
+    display: flex;
+    gap: 20px;
+}
+
+.sec7_card{
+    padding:1rem 1rem;
+    border: 1px solid;
+    border-radius: 8px;
+}
+
+.sec7_content p{
+    margin-top: 2%;
+    color: rgb(50, 48, 48);
+    font-size: 1.4rem;
+}
+
+/* css for section8 */
+.section8{
+    margin-top: 5%;
+}
+
+.col8{
+    width: calc(100%/4);
+    padding: 1rem 0;
+}
+
+.sec8_card{
+    padding: 1rem 0;
 }
